--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,33 +4,43 @@ volumes:
   bundle_cache:
   postgres:
 
+networks:
+  backend:
+  frontend:
+
 services:
   postgres:
     image: postgres:11.3-alpine
     environment:
       - POSTGRES_USER=tcc_caio
       - POSTGRES_PASSWORD=tcc_caio
-    volumes:
-      - postgres:/var/lib/postgresql/data
+    networks:
+      - backend
     ports:
       - 5432:5432
+    volumes:
+      - postgres:/var/lib/postgresql/data
   redis:
     image: redis:alpine
+    networks:
+      - backend
     ports:
       - 6379:6379
   encryptor:
     build:
       context: ./encryptor_umbrella
+    depends_on:
+      - redis
+      - postgres
     environment:
       PGUSER: tcc_caio
       PGPASSWORD: tcc_caio
       PGPORT: 5432
       PGHOST: postgres
+    networks:
+      - backend
     volumes:
       - ./encryptor_umbrella:/opt/app
     ports:
       - 4000:4000
-    depends_on:
-      - redis
-      - postgres
 
