--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,5 @@
 version: '3.7'
 
-volumes:
-  gems:
-  postgres_data:
-
-networks:
-  backend:
-  frontend:
-
 services:
   postgres:
     image: postgres:11.3-alpine
@@ -30,6 +22,9 @@ services:
       PGPASSWORD: tcc_caio
       PGPORT: 5432
       PGHOST: postgres
+      ENCRYPTOR_URL: encryptor
+      DATABASE_URL: postgres://tcc_caio:tcc_caio@postgres:5432/encryptor_dev
+      SECRET_KEY_BASE: encryptor_dev
     networks:
       - backend
     volumes:
@@ -47,6 +42,7 @@ services:
       PGPASSWORD: tcc_caio
       PGPORT: 5432
       PGHOST: postgres
+      ENCRYPTOR_URL: http://encryptor:4000
     links:
       - encryptor
       - postgres
@@ -58,3 +54,10 @@ services:
     ports:
       - 3000:3000
 
+volumes:
+  gems:
+  postgres_data:
+
+networks:
+  backend:
+    driver: bridge
