--- a/encryptor_client/Gemfile
+++ b/encryptor_client/Gemfile
@@ -10,6 +10,9 @@ gem 'rails', '~> 6.0.0'
 gem 'pg', '>= 0.18', '< 2.0'
 
 gem 'bootsnap', '>= 1.4.2', require: false
+gem 'faraday', '~> 0.15.4'
+gem 'httpclient', '~> 2.8.3'
+gem 'oj'
 gem 'puma', '~> 3.11'
 # gem 'bcrypt', '~> 3.1.7'
 # gem 'image_processing', '~> 1.2'
@@ -19,10 +22,16 @@ gem 'rack-cors'
 
 group :development, :test do
   gem 'byebug'
+  gem 'rspec-rails', '~> 3.8'
 end
 
 group :development do
+  gem 'guard-rspec', require: false
   gem 'listen', '>= 3.0.5', '< 3.2'
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
+end
+
+group :test do
+  gem 'webmock'
 end
