--- a/encryptor_client/Gemfile
+++ b/encryptor_client/Gemfile
@@ -18,6 +18,8 @@ gem 'puma', '~> 3.11'
 # gem 'image_processing', '~> 1.2'
 
 gem 'attr_encrypted', '~> 3.1.0'
+gem 'connection_pool', '~> 2.2.2'
+gem 'nio4r', '~> 2.5'
 gem 'rack-cors'
 
 group :development, :test do
